# zingg

./: .classpath  .gitattributes  .gitignore  .project  .readthedocs.yaml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  _config.yml  buf.gen.yaml  buf.work.yaml  copyright.txt  generate-agpl-license.sh  index.md  loadTest.py  loadTestReport_1729850488.479953  loadTestReport_1731315754.8297133  loadTestReport_1731316352.9782615  loadTestReport_1731317648.5763354  loadTestReport_1731318116.360373  loadTestReport_1731318449.2858524  loadTestReport_1731459175.4822762  loadTestReport_1731462531.0053368  log.txt  log4j.properties  log4j2.properties  newtree.txt  perf_test_input.py  pom.xml  releaseActivities.txt  ruleset.xml  spark-defaults.conf  spark.env  tree.txt
python/: MANIFEST.in  PKG-INFO  README.md  install.py  pom.xml  pyproject.toml  requirements.txt  setup.py  test_spark_connect.py  version.py
python/Examples/: MANIFEST.in  PKG-INFO  README.md  install.py  requirements.txt  setup.py  version.py
python/api/: MANIFEST.in  PKG-INFO  setup.py  zingg.py  zinggPipes.py
python/condaRecipe/: meta.yaml
python/docs/: Makefile  conf.py  index.rst  modules.rst  requirements.txt  usage.rst  zingg.client.rst  zingg.pipes.rst  zingg.rst
python/examples/: FebrlExample.py
python/phases/: assessModel.py  exportModel.py  zingg.py  zinggPipes.py
python/zingg/: ArgumentsGenerated.py  ExampleApplication.java  FieldDefinitionGenerated.py  PipeGenerated.py  __init__.py  client.py  databricks.py  otherThanGenerated.py  otherThanGeneratedArguments.py  (+5 more)
(+9291 files in other folders)
