[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zingg"
dynamic = ["version"]
dependencies = [
  "pandas",
  "seaborn",
  "matplotlib",
  "sphinx",
  "sphinx-rtd-theme",
  "pyspark>=3.5",
  "pydantic",
]
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 150
