[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zingg-connect"
version = "0.1.0"
description = "Spark-Connect-native Python API for Zingg (no py4j). Standalone module, not yet merged into the main zingg python package."
requires-python = ">=3.8"
dependencies = [
    "pyspark>=3.4.0",
    "protobuf>=4.21",
    "grpcio>=1.48",
]

[tool.setuptools.packages.find]
include = ["zingg_connect*"]
